--- a/index.html
+++ b/index.html
@@ -15,17 +15,92 @@ layout: base
 </section>
 <section id="statsOverview" class="py-2 container">
     <div class="row">
-        <div class="col-md-4">
-            <div id="ws281xVersionsContainer"></div>
+        <div class="col-md-6">
+            <div id="bedlevelvisualizer"></div>
         </div>
         <div class="col-md-6">
-            <div id="eepromVersionContainer"></div>
+            <div id="floatingnavbar"></div>
         </div>
         <div class="col-md-6">
-            <div id="autologinVersionContainer"></div>
+            <div id="taborder"></div>
         </div>
         <div class="col-md-6">
-            <div id="virtualPrinterVersionContainer"></div>
+            <div id="prusaslicerthumbnails"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="tplinksmartplug"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="bedlevelingwizard"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="displayprogress"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="widescreen"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="stlviewer"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="dragon_order"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="consolidate_temp_control"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="custombackground"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="consolidatedtabs"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="terminalcommandsextended"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="tasmota"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="backupscheduler"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="sidebartempgraph"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="active_filters_extended"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="statefulsidebar"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="youtubelive"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="mqttpublish"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="wemoswitch"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="tasmota_mqtt"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="multilineterminal"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="rtmpstreamer"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="webcam_iframe"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="stickypad"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="mqttsubscribe"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="domoticz"></div>
         </div>
     </div>
 </section>
