add missing containers

--- a/index.html
+++ b/index.html
@@ -102,6 +102,39 @@ layout: base
         <div class="col-md-6">
             <div id="domoticz"></div>
         </div>
+        <div class="col-md-6">
+            <div id="m117navbar"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="m117popup"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="bltouch"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="m117speechsynthesis"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="myminifactory"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="ultimakerformatpackage"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="python3plugincompatibilitycheck"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="autoterminalinput"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="easyservo"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="m300player"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="arducamfocus"></div>
+        </div>
     </div>
 </section>
 <script src="static/js/main-v1.js?v=1.0.0"></script>
