fix container id

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@ layout: base
         <div class="col-md-6">
             <div id="arducamfocus"></div>
         </div>
+        <div class="col-md-6">
+            <div id="iponconnect"></div>
+        </div>
     </div>
 </section>
 <script src="static/js/main-v1.js?v=1.0.0"></script>
