try fluid container

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: base
         </div>
     </div>
 </section>
-<section id="statsOverview" class="py-2 container">
-    <div class="row">
+<section id="statsOverview" class="py-2 container-fluid">
+    <div class="row-fluid">
         <div class="col-md-3">
             <div id="bedlevelvisualizer"></div>
         </div>
