--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: base
     </div>
 </section>
 <section id="statsOverview" class="py-2 container-fluid">
-    <div class="row-fluid">
+    <div class="row">
         <div class="col-md-3">
             <div id="bedlevelvisualizer"></div>
         </div>
