--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: base
                 <a href="#statsOverview" class="btn btn-primary my-2">View the stats!</a>
             </p>
 			<div class="btn-group">
-			  <button type="button" class="btn btn-seccondary">Select Plugin</button>
-			  <button type="button" class="btn btn-seccondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  <button type="button" class="btn btn-secondary">Select Plugin</button>
+			  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<span class="sr-only">Toggle Dropdown</span>
 			  </button>
 			  <div class="dropdown-menu" id="btnContainer">
