--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
             <h1 class="fw-light">jneilliii's OctoPrint Plugin Statistics</h1>
 			<div class="btn-group">
 			  <button type="button" class="btn btn-secondary">Select Plugin</button>
-			  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<span class="sr-only">Toggle Dropdown</span>
 			  </button>
 			  <div class="dropdown-menu" id="btnContainer">
