--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ layout: base
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">jneilliii's OctoPrint Plugin Statistics</h1>
-			<div class="btn-group">
-			  <button type="button" class="btn btn-secondary">Select Plugin</button>
-			  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<span class="sr-only">Toggle Dropdown</span>
-			  </button>
-			  <div class="dropdown-menu" id="btnContainer">
-			  </div>
-			</div>
+            <div class="dropdown">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Select Plugin
+              </a>
+
+              <ul class="dropdown-menu" id="btnContainer" aria-labelledby="dropdownMenuLink">
+              </ul>
+            </div>
         </div>
     </div>
 </section>
