more button tweaks

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ layout: base
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">jneilliii's OctoPrint Plugin Statistics</h1>
 			<div class="btn-group">
-			  <button type="button" class="btn btn-secondary">Select Plugin</button>
-			  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" >Select Plugin</button>
 				<span class="sr-only">Toggle Dropdown</span>
 			  </button>
 			  <div class="dropdown-menu" id="btnContainer">
