--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
     </div>
 </section>
 <section id="statsOverview" class="py-2 container">
-    <div class="row">
+    <div class="row-fluid">
     </div>
 </section>
 <script src="static/js/main-v1.js?v=1.2.2"></script>
