--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: jneilliii's Plugin Stats
+title: Synman's Plugin Stats
 layout: base
 ---
 
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">jneilliii's OctoPrint Plugin Statistics</h1>
+            <h1 class="fw-light">Synman's OctoPrint Plugin Statistics</h1>
             <div class="btn-group">
               <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" >Select Plugin</button>
                 <span class="sr-only">Toggle Dropdown</span>
